Add substitution logic to fetches of teams and participants
