# backend/src/main/kotlin/de/lambda9/ready2race/backend/app/participant/entity/ParticipantForEventDto.kt
@@ -1,10 +1,7 @@
 package de.lambda9.ready2race.backend.app.participant.entity
 
-import de.lambda9.ready2race.backend.app.appuser.entity.AppUserNameDto
 import de.lambda9.ready2race.backend.app.participantRequirement.entity.ParticipantRequirementReducedDto
-import de.lambda9.ready2race.backend.app.participantTracking.entity.ParticipantScanType
 import de.lambda9.ready2race.backend.database.generated.enums.Gender
-import java.time.LocalDateTime
 import java.util.*
 
 data class ParticipantForEventDto(
@@ -20,7 +17,4 @@ data class ParticipantForEventDto(
     val participantRequirementsChecked: List<ParticipantRequirementReducedDto>?,
     val qrCodeId: String?,
     val namedParticipantIds: List<UUID>,
-    val currentStatus: ParticipantScanType?,
-    val lastScanAt: LocalDateTime?,
-    val lastScanBy: AppUserNameDto?,
 )
